<resources>
    <string name="app_name">IDC Drivers</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Support -->
    <string name="default_support_operator_number">81234567890</string>

    <!-- Launcher -->
    <string name="launching">Launching…</string>
    <string name="you_must_allow_to_use_location">You must allow the application to use your location to use this app!</string>

    <!-- Login -->
    <string name="login_activity_title">IDC Drivers log in</string>
    <string name="login_button">Log in</string>
    <string name="login_field_hint">E-mail</string>
    <string name="password_field_hint">Password</string>
    <string name="login_connection_error">Check your internet connection</string>
    <string name="login_error">Something went wrong</string>
    <string name="login_wrong_password">Wrong password</string>


    <!-- Tasks list -->
    <string name="driver_tasks_list_title">Delivery tasks</string>
    <string name="get_driver_tasks_list_error">Error while downloading list of tasks, please try later!</string>
    <string name="tasks_list_item_due_date">Due to:\n%1$s</string>
    <string name="task_list_item_order_id">Task № %1$d</string>
    <string name="no_task_for_now">You don\'t have any tasks for now</string>

    <!--Menu Items -->
    <string name="call_support_menu_item_text">Call support</string>
    <string name="log_out_menu_item_text">Log out</string>
    <string name="show_map_item_title">Show map</string>

    <!-- Task description -->
    <string name="driver_task_activity_title">Delivery task details</string>

    <string name="customer_email_field">%1$s</string>
    <string name="customer_name_field">%1$s</string>
    <string name="taskError">Something is wrong :(</string>
    <string name="origin">Address: </string>
    <string name="contacts">Contacts: </string>
    <string name="due_date">Due date: </string>
    <string name="driver_task_connection_error">Check your internet connection</string>
    <string name="finish_task_button">Finish task</string>
    <string name="original_address">%1$s</string>
    <string name="destination_address">%1$s</string>
    <string name="button_default_text">Accept</string>
    <string name="destination_field_default">Destination address</string>
    <string name="accept_task_button">Accept task</string>
    <string name="description">Description:</string>
    <string name="message_after_finishing">Task is finished!</string>
    <string name="already_have_task">You already have a task to finish</string>
    <string name="question_accept">Are you sure you want to start the task?</string>
    <string name="finish_question">Are you sure you have finished the task?</string>
    <string name="customer_name">Customer name:</string>
    <string name="customer_email">Customer email:</string>
    <string name="customer_origin_address">Origin address</string>
    <string name="image_for_no_tasks_event_for_image_view">Image for no tasks event</string>


    <!-- DateTime formats -->
    <string name="default_date_time_format">hh:mm dd.MM.yy</string>
    <string name="status_default">In progress</string>


    <!-- Notifications -->
    <string name="new_task_notification_title">IDC Drivers</string>
    <string name="new_task_notification_text">New task have been assigned to you!</string>

    <!-- Notification channels -->
    <string name="new_tasks_assigned_channel_id">NEW_TASKS_ASSIGNED</string>
    <string name="new_tasks_assigned_channel_name">New tasks notifications</string>
    <string name="new_tasks_assigned_channel_description">Receive notifications when new tasks are assigned to you</string>

    <string name="new_support_chat_message_channel_id">NEW_TASKS_ASSIGNED</string>
    <string name="new_support_chat_message_channel_name">New tasks notifications</string>
    <string name="new_support_chat_message_channel_description">Receive notifications when new tasks are assigned to you</string>


    <!-- Navigation -->
    <string name="task_navigation_title">Task №%d Navigation</string>
    <string name="remaining_time_title">Remaining time:</string>
    <string name="remaining_time">%d d : %d h : %d m</string>

    <!-- Support chat -->
    <string name="support_chat_title">Support chat</string>
    <string name="enter_message">Enter message…</string>
    <string name="support_chat_menu_item_text">Contact support</string>
    <string name="send_message_error">Failed to send the message. Check Internet connection!</string>

</resources>
